--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -18,6 +18,7 @@
             <th scope="col">Prenom</th>
             <!-- <th scope="col">Login</th> -->
             <th scope="col">Action</th>
+            <th scope="col">Compte</th>
           </tr>
         </thead>
         <tbody>
@@ -27,10 +28,12 @@
             <td>{{c.prenom}}</td>
             <!-- <td>{{c.login}}</td> -->
             <td >
-
               <button class="btn btn-info mr-1" routerLink="/client-show/{{c.id}}">Détails</button>
               <button class="btn btn-warning mr-1" routerLink="/client-edit/{{c.id}}">Mettre à Jour</button>
               <button class="btn btn-danger" (click)="deleteClient(c.id)">Effacer</button>
+            </td>
+            <td>
+              <button class="btn btn-info mr-1" routerLink="/client-compte/{{c.id}}">Compte</button>
             </td>
           </tr>
         </tbody>
