--- a/src/app/client-show/client-show.component.html
+++ b/src/app/client-show/client-show.component.html
@@ -1,17 +1,17 @@
 <div class="container custom-container">
   <div class="col-md-12">
-    
- 
+
+
  <div class="card" style="width: 18rem;">
 
   <div class="card-body">
     <h5 class="card-title">{{clientDetails.prenom}} {{clientDetails.nom}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Login</h6><p class="card-text">{{clientDetails.login}}</p>
     <h6 class="card-subtitle mb-2 text-muted">Address</h6><p class="card-text">{{clientDetails.adresse.numero}} {{clientDetails.adresse.rue}} {{clientDetails.adresse.ville}} </p>
+    <!-- <h6 class="card-subtitle mb-2 text-muted">Compte Courant</h6><p class="card-text">{{clientDetails.compteCourant.solde}} {{clientDetails.compteCourant.numeroCompte}}</p> -->
     <a href="#" class="btn btn-primary" (click)="gotoList()" >Back to client list</a>
   </div>
 </div>
 
-    
+
   </div>
 </div>
