remplacer les mots en anglais en francais

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,14 @@
 
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">Client Management</a>
+    <a href="#" class="navbar-brand">Gestion du client</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a  class="btn btn-primary"  routerLinkActive="active" routerLink="/create-client" >Create Client </a>&nbsp;&nbsp;&nbsp;
+        <a  class="btn btn-primary"  routerLinkActive="active" routerLink="/create-client" >Créer un client </a>&nbsp;&nbsp;&nbsp;
 
       </li>
       <li class="nav-item">
-         <a class="btn btn-info" routerLinkActive="active" routerLink="/clients-list">Clients List</a>
+         <a class="btn btn-info" routerLinkActive="active" routerLink="/clients-list">Liste des clients</a>
       </li>
     </div>
   </nav>
