--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -28,8 +28,8 @@
             <td>{{c.prenom}}</td>
             <!-- <td>{{c.login}}</td> -->
             <td >
-              <button class="btn btn-info mr-1" routerLink="/client-show/{{c.id}}">Détails</button>
-              <button class="btn btn-warning mr-1" routerLink="/client-edit/{{c.id}}">Mettre à Jour</button>
+              <button class="btn btn-info mr-1" routerLink="/client-show/{{c.id}}">Détails</button>&nbsp;&nbsp;&nbsp;
+              <button class="btn btn-warning mr-1" routerLink="/client-edit/{{c.id}}">Mettre à Jour</button>&nbsp;&nbsp;&nbsp;
               <button class="btn btn-danger" (click)="deleteClient(c.id)">Effacer</button>
             </td>
             <td>
