--- a/src/app/client-create/client-create.component.html
+++ b/src/app/client-create/client-create.component.html
@@ -4,7 +4,7 @@
             <h3 class="mb-3 text-center">Créer un Client</h3>
 
             <div class="form-group">
-                <input type="text" [(ngModel)]="clientDetails.nom" name="nom"  class="form-control" placeholder="Nom">
+                <input type="text" [(ngModel)]="clientDetails.nom" name="nom"  class="form-control" placeholder="Nom" >
                 <input type="text" [(ngModel)]="clientDetails.prenom" name="prenom"  class="form-control" placeholder="Prenom">
                 <!-- <input type="text" [(ngModel)]="clientDetails.login" name="login"  class="form-control" placeholder="Login"> -->
                 <input type="text" [(ngModel)]="clientDetails.telephone" name="telephone"  class="form-control"
@@ -12,7 +12,7 @@
                 <input type="text" [(ngModel)]="clientDetails.adresse.rue" name="adresss"  class="form-control" placeholder="Adresse">
                 <input type="text" [(ngModel)]="clientDetails.adresse.codePostal" name="codepostal"  class="form-control" placeholder="Code Postal">
                 <input type="text" [(ngModel)]="clientDetails.adresse.ville" name="ville"  class="form-control"
-                        placeholder="Ville">
+                        placeholder="Ville"> <br>
                 <button class="btn btn-success btn-lg btn-block" (click)="addClient()">Ajouter</button>
             </div>
         </form>
