--- a/src/app/client-show/client-show.component.html
+++ b/src/app/client-show/client-show.component.html
@@ -8,7 +8,7 @@
     <h5 class="card-title">{{clientDetails.prenom}} {{clientDetails.nom}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">Téléphone</h6><p class="card-text">{{clientDetails.telephone}}</p>
     <h6 class="card-subtitle mb-2 text-muted">Adresse</h6><p class="card-text">{{clientDetails.adresse.numero}} {{clientDetails.adresse.rue}} {{clientDetails.adresse.ville}} </p>
-    <a href="#" class="btn btn-primary" (click)="gotoList()" >Back to client list</a>
+    <a href="#" class="btn btn-primary" (click)="gotoList()" >Retour à la liste des clients</a>
   </div>
 </div>
 
