--- a/src/app/client-edit/client-edit.component.html
+++ b/src/app/client-edit/client-edit.component.html
@@ -4,19 +4,19 @@
             <h3 class="mb-3 text-center">Update Client</h3>
 
             <div class="form-group">
-                <input type="text" [(ngModel)]="clientDetails.nom" name="nom" [value]="clientDetails.nom" class="form-control" placeholder="Nom">
+                <input type="text" [(ngModel)]="clientDetails.nom" name="nom" [value]="clientDetails.nom" class="form-control" placeholder="Nom" required>
 
-                <input type="text" [(ngModel)]="clientDetails.prenom" name="prenom" [value]="clientDetails.prenom" class="form-control" placeholder="Prenom">
+                <input type="text" [(ngModel)]="clientDetails.prenom" name="prenom" [value]="clientDetails.prenom" class="form-control" placeholder="Prenom" required>
 
                     <input type="text" [(ngModel)]="clientDetails.telephone" name="telephone" [value]="clientDetails.telephone" class="form-control"
-                        placeholder="téléphone">
+                        placeholder="téléphone" required>
 
-                    <input type="text" [(ngModel)]="clientDetails.adresse.rue" name="rue" [value]="clientDetails.adresse.rue" class="form-control" placeholder="rue">
-                    <input type="text" [(ngModel)]="clientDetails.adresse.codePostal" name="codePostal" [value]="clientDetails.adresse.codePostal" class="form-control" placeholder="codePostal">
+                    <input type="text" [(ngModel)]="clientDetails.adresse.rue" name="rue" [value]="clientDetails.adresse.rue" class="form-control" placeholder="rue" required>
+                    <input type="text" [(ngModel)]="clientDetails.adresse.codePostal" name="codePostal" [value]="clientDetails.adresse.codePostal" class="form-control" placeholder="codePostal" required>
                     <input type="text" [(ngModel)]="clientDetails.adresse.ville" name="ville" [value]="clientDetails.adresse.ville" class="form-control"
-                        placeholder="ville">
+                        placeholder="ville" required>
 
-                <button class="btn btn-success btn-lg btn-block" (click)="updateClient()">Mise à jour</button>
+                <button class="btn btn-success btn-lg btn-block" (click)="updateClient()" [disabled]="!mainForm.form.valid">Mise à jour</button>
             </div>
         </form>
     </div>
