--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,11 @@
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a href="#" class="navbar-brand">Gestion du client</a>
     <div class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="this.router.url !== '/create-client'">
         <a  class="btn btn-primary"  routerLinkActive="active" routerLink="/create-client" >Créer un client </a>&nbsp;&nbsp;&nbsp;
 
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="this.router.url !== '/clients-list'">
          <a class="btn btn-info" routerLinkActive="active" routerLink="/clients-list">Liste des clients</a>
       </li>
     </div>
